Mongo-test/mong/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
spec:
  rules:
  - host: mongo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
    # - path: /about
      # pathType: Prefix
      # backend:
        # service:
          # name: mongo-db-service
          # port:
            # number: 20000
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: name-virtual-host-ingress
#spec:
#  rules:
#  - host: anaytics.myapp.com
#    http:
#      paths:
#        backend:
#          service:
#            name: examplename
#            port: examplePort
#  - host: shopping.myapp.com
#    http:
#      paths:
#        backend:
#          service:
#            name: shopping-service
#            port: 8080
#
#

###### Configuring TLS certificate
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: tls-example-ingress
#spec:
#  tls:
#  - hosts:
#    - myapp.com
#    secretName: myapp-secret-tls
#  rules:
#    - host: myapp.com
#      http:
#        paths:
#        - path: /
#          backend:
#            service:
#              name: myapp-internal-service
#              port: 8080
